src/views/Advantages/Advantages.module.scss
.advantages {
  margin-bottom: 128px;
  overflow: hidden;

  @media (max-width: 576px) {
    margin-bottom: 76px;
  }
}

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;

  * {
    text-align: center;
  }
}

.brief {
  color: #94a3b8;
  font-weight: 700;
  font-size: 20px;
  letter-spacing: 4px;
  text-transform: uppercase;

  @media (max-width: 576px) {
    font-size: 14px;
  }
}

.title {
  color: #000;
  font-weight: 700;
  font-size: 72px;
  letter-spacing: -2.8px;
  line-height: 120%;
  margin-block: 16px 32px;

  br:last-of-type {
    display: none;

    @media (max-width: 576px) {
      display: block;
    }
  }

  @media (max-width: 576px) {
    font-size: 36px;
    letter-spacing: -1.44px;
    margin-block: 8px 24px;
  }
}

.descr {
  max-width: 732px;
  color: #475569;
  font-size: 24px;
  line-height: 130%;
  letter-spacing: -0.48px;

  br {
    display: none;

    @media (max-width: 576px) {
      display: block;
    }
  }

  @media (max-width: 576px) {
    font-size: 16px;
    letter-spacing: -0.32px;
  }
}

.list {
  padding-block: 64px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;

  @media (max-width: 576px) {
    grid-template-columns: repeat(1, 1fr);
    gap: 8px;
  }
}

.item {
  position: relative;

  @media (max-width: 576px) {
    width: 100%;
    max-width: 328px;
    margin: 0 auto;

    &:nth-of-type(2) {
      order: 1;
    }

    &:last-of-type {
      order: 2;
    }
  }
}

.image {
  width: 100%;
  height: 296px;

  @media (max-width: 576px) {
    display: none;
  }
}

.pros {
  padding: 16px 24px;
  color: #000;
  font-weight: 700;
  font-size: 24px;
  letter-spacing: -1px;
  display: flex;
  align-items: center;
  gap: 16px;
  border-radius: 128px;
  background: #ffffff;
  box-shadow: 0px 0px 128px 0px #00000033;
  width: max-content;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;

  @media (max-width: 576px) {
    position: initial;
    width: fit-content;
    transform: none;

    font-size: 16px;
    letter-spacing: -0.6px;
    padding: 12px 16px;
    width: 100%;
    justify-content: center;
  }

  svg {
    @media (max-width: 576px) {
      width: 16px;
      height: 16px;
    }
  }
}

.item:nth-child(2n + 1) {
  .pros {
    top: 40px;
  }
}

.item:nth-child(2n) {
  .pros {
    top: 119px;
  }
}

.button {
  width: fit-content;
  margin: 0 auto;

  @media (max-width: 576px) {
    display: none;
  }
}

.picturesMobile {
  display: none;

  @media (max-width: 576px) {
    display: flex;
    align-items: center;
    gap: 8px;
    width: max-content;
    height: auto;
    translate: -16%;

    img {
      width: 132px;
      height: 160px;
    }
  }
}

